@@ -14,6 +14,8 @@ VERSION 2.9-Beta 1
      compilers currently supported by KDE.
 
   BUGFIXES:
+   * Fix an assertion failure when a track in Local Collection is replaced by another
+     already tracked one. (BR 323156)
    * Fix failure to start embedded MySQL (with version 5.1 and MariaDB). (BR 323802)
    * Fixed compilation with libc++ (used on OSX and FreeBSD). (BR 324075)
    * Fixed crashes with Intel drivers due to Analyzer applet. (BR 323635)
